[build-system]
requires = [
    "setuptools>=59",
]
build-backend = "setuptools.build_meta"

[project]
name = "veering_16"
description = "Database of veering triangulations up to 16 tetrahedra"
authors = [
    {name = "Saul Schleimer", email = "saulsch@gmail.com"}
]
readme = "README.rst"
license = {text = "GPLv2+"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/saulsch/veering_16"

[tool.setuptools.dynamic]
version = {attr = "veering_16.__version__"}